--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Professional marketing and SEO services tailored to grow your business online." />
-  <meta name="keywords" content="SEO, Marketing, Website Development, Business Growth, Digital Marketing" />
-  <meta name="author" content="Tal Hadad" />
-  <title>RankMind</title>
-  <link rel="stylesheet" href="../CSS/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Professional marketing and SEO services tailored to grow your business online.">
+  <meta name="keywords" content="SEO, Marketing, Website Development, Business Growth, Digital Marketing">
+  <meta name="author" content="RankMind">
+  <title>RankMind-Home</title>
+  <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 <body>
   <header class="main-header">
@@ -19,6 +20,7 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#services">Services</a></li>
+      <li><a href="#pricing">Pricing</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -26,8 +28,12 @@
 
   <main class="content">
     <section id="home">
-      <h1>Welcome to RankMind</h1>
-      <p>We specialize in SEO and marketing to help businesses grow online.</p>
+      <h1>We specialize in SEO and marketing to help businesses grow online</h1>
+      <p>Get Your Business Discovered — by Google, GPT & Beyond
+          We help local businesses stand out where it matters most:
+           in Google search, AI chatbots like ChatGPT, and social networks.
+            Our tailored SEO and marketing strategies make sure your brand shows
+             up when and where customers are looking.</p>
     </section>
     <!-- More sections go here -->
   </main>
