Create language folders

--- a/Pages/English/404.html
+++ b/Pages/English/404.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Oops! Page not found on RankMind.">
   <meta name="author" content="RankMind">
   <title>404 | Page Not Found</title>
-  <link rel="stylesheet" href="./CSS/ui.css">
-  <link rel="icon" href="./Images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../../Styles/ui.css">
+  <link rel="icon" href="../../Images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
