--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -7,12 +7,12 @@
   <meta name="description" content="Learn more about RankMind's team, values, and mission behind our SEO success.">
   <meta name="keywords" content="RankMind team, SEO mission, About RankMind, Marketing team">
   <meta name="author" content="RankMind">
-  <link rel="canonical" href="https://www.rankmind.net/HTML/about.html">
+  <link rel="canonical" href="https://www.rankmind.net/Pages/English/about.html">
 
   <meta property="og:title" content="About RankMind">
   <meta property="og:description" content="Discover the people and values driving RankMind's marketing expertise.">
   <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png">
-  <meta property="og:url" content="https://www.rankmind.net/HTML/about.html">
+  <meta property="og:url" content="https://www.rankmind.net/Pages/English/about.html">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
@@ -23,8 +23,8 @@
   <meta http-equiv="Content-Language" content="en">
 
   <title>RankMind-About</title>
-  <link rel="stylesheet" href="../CSS/ui.css">
-  <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
+  <link rel="stylesheet" href="../../Styles/ui.css">
+  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
 <body>
@@ -58,6 +58,6 @@
     <p class="footer-text">RankMind © 2025</p>
   </footer>
 
-  <script src="../JS/menu.js"></script>
+  <script src="../../Scripts/menu.js"></script>
 </body>
 </html>
