--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -8,13 +8,13 @@
     <meta name="description" content="Get in touch with RankMind for expert SEO and marketing solutions.">
     <meta name="keywords" content="Contact RankMind, SEO support, Marketing help, Get in touch">
     <meta name="author" content="RankMind">
-    <link rel="canonical" href="https://www.rankmind.net/HTML/contact.html">
+    <link rel="canonical" href="https://www.rankmind.net/Pages/English/contact.html">
 
     <!-- Social Sharing (Open Graph) -->
     <meta property="og:title" content="Contact RankMind">
     <meta property="og:description" content="Talk with our team about your business goals and digital strategy">
     <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png"> <!-- create this image Size: 1200×630px (recommended), Content: Logo + tagline + maybe a service image (clean and branded) -->
-    <meta property="og:url" content="https://www.rankmind.net/HTML/contact.html">
+    <meta property="og:url" content="https://www.rankmind.net/Pages/English/contact.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
@@ -28,8 +28,8 @@
 
     <!-- Title and Styles -->
     <title>Contact Us | RankMind</title>
-    <link rel="stylesheet" href="../CSS/ui.css">
-    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
+    <link rel="stylesheet" href="../../Styles/ui.css">
+    <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
 <body>
