Make the Hebrew text in the navbar and section appeard as RTL

--- a/Pages/Hebrew/about.html
+++ b/Pages/Hebrew/about.html
@@ -22,7 +22,7 @@
 
   <meta http-equiv="Content-Language" content="he">
 
-  <title>RankMind-מידע</title>
+  <title>RankMind - מידע</title>
   <link rel="stylesheet" href="../../Styles/ui.css">
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
@@ -33,16 +33,16 @@
     <div class="burger-icon" onclick="toggleMenu()">☰</div>
   </header>
 
-  <nav id="side-menu" class="side-menu">
+  <nav id="side-menu" class="side-menu" style="direction: rtl;">
     <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#pricing">Pricing</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">עלינו</a></li>
+      <li><a href="#services">שירותים</a></li>
+      <li><a href="#pricing">מחירים</a></li>
+      <li><a href="#contact">צור קשר</a></li>
     </ul>
   </nav>
 
-  <main class="content">
+  <main class="content-rtl">
     <section id="home">
       <h1>אנו מתמחים בקידום אתרים (SEO) ושיווק כדי לעזור לעסקים לצמוח באינטרנט</h1>
       <p>גלו את העסק שלכם - על ידי גוגל, GPT ומעבר אנו עוזרים לעסקים מקומיים להתבלט 
