Sticky nav and Language toggle

--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <header class="main-header">
+  <header id="main-header">
     <div class="logo">RankMind</div>
     <div class="burger-icon" onclick="toggleMenu()">☰</div>
   </header>
@@ -39,6 +39,7 @@
       <li><a href="#services">Services</a></li>
       <li><a href="#pricing">Pricing</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="../Hebrew/about.html">Change Language 🌐</a></li>
     </ul>
   </nav>
 
@@ -52,6 +53,37 @@
              up when and where customers are looking.</p>
     </section>
     <!-- More sections go here -->
+
+    <!-- Delete me -->
+    <h2>
+      We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
+      in Google search, AI chatbots like ChatGPT, and social networks.
+      Our tailored SEO and marketing strategies make sure your brand shows
+    </h2>
+    <!-- Delete me -->
+
   </main>
 
   <footer>
