--- a/Pages/Hebrew/about.html
+++ b/Pages/Hebrew/about.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <header class="main-header">
+  <header id="main-header">
     <div class="logo">RankMind</div>
     <div class="burger-icon" onclick="toggleMenu()">☰</div>
   </header>
@@ -39,6 +39,7 @@
       <li><a href="#services">שירותים</a></li>
       <li><a href="#pricing">מחירים</a></li>
       <li><a href="#contact">צור קשר</a></li>
+      <li><a href="../English/about.html">🌐 שפה</a></li>
     </ul>
   </nav>
 
