Create templete to some files

--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -36,9 +36,9 @@
   <nav id="side-menu" class="side-menu">
     <ul>
       <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#pricing">Pricing</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="./services.html">Services</a></li>
+      <li><a href="./pricing.html">Pricing</a></li>
+      <li><a href="./contact.html">Contact</a></li>
       <li><a href="../Hebrew/about.html">Change Language 🌐</a></li>
     </ul>
   </nav>
@@ -53,36 +53,6 @@
              up when and where customers are looking.</p>
     </section>
     <!-- More sections go here -->
-
-    <!-- Delete me -->
-    <h2>
-      We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows          We help local businesses stand out where it matters most:
-      in Google search, AI chatbots like ChatGPT, and social networks.
-      Our tailored SEO and marketing strategies make sure your brand shows
-    </h2>
-    <!-- Delete me -->
 
   </main>
 
