Change menu.js to ui.js

--- a/Pages/English/pricing.html
+++ b/Pages/English/pricing.html
@@ -70,6 +70,6 @@
     <p class="footer-text">RankMind © 2025</p>
   </footer>
 
-  <script src="../../Scripts/menu.js"></script>
+  <script src="../../Scripts/ui.js"></script>
 </body>
 </html>
