Add pages.css for animations in the pages exlude index.html

--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -29,6 +29,7 @@
     <!-- Title and Styles -->
     <title>Contact Us | RankMind</title>
     <link rel="stylesheet" href="../../Styles/ui.css">
+    <link rel="stylesheet" href="../../Styles/pages.css">
     <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
