Create effect and content to About page

--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -25,6 +25,7 @@
   <title>RankMind-About</title>
   <link rel="stylesheet" href="../../Styles/ui.css">
   <link rel="stylesheet" href="../../Styles/pages.css">
+  <link rel="stylesheet" href="../../Styles/visuals.css">
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
@@ -44,6 +45,11 @@
     </ul>
   </nav>
 
+  <header class="hero content">
+    <h1>Who We Are</h1>
+    <p>Empowering Local Businesses with Smart Visibility</p>
+  </header>
+
   <main class="content">
     <section id="home">
       <h1>We specialize in SEO and marketing to help businesses grow online</h1>
@@ -53,12 +59,43 @@
             Our tailored SEO and marketing strategies make sure your brand shows
              up when and where customers are looking.</p>
     </section>
-    <!-- More sections go here -->
 
+    <section>
+      <h2>Our Mission</h2>
+      <p>We help small and local businesses grow by making them more discoverable online. Through tailored SEO strategies, chatbot optimization for platforms like ChatGPT, and smart use of social media, we drive real results where it matters — locally.</p>
+    </section>
+    
+    <section>
+      <h2>Why Choose Us</h2>
+      <ul class="service-list">
+        <li>✔ Human-first, small-team care and direct support</li>
+        <li>✔ Proven SEO tactics that rank your business on Google</li>
+        <li>✔ Local chatbot placement that puts your services in ChatGPT</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>What We Believe In</h2>
+      <p>We believe every local business deserves the chance to compete in the digital world without needing a huge budget or technical expertise. That’s why we focus on clarity, strategy, and honest results.</p>
+    </section>
   </main>
 
-  <footer>
-    <p class="footer-text">RankMind © 2025</p>
+  <!-- Footer or Divider (Optional) -->
+  <div class="section-divider">
+    <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+      <path class="divider-wave" d="M0,0 C600,50 600,50 1200,0 L1200,120 L0,120 Z"></path>
+    </svg>
+  </div>
+    <!-- SVG Divider -->
+  <div class="section-divider">
+    <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+      <path class="divider-wave" d="M0,0 C300,100 900,0 1200,100 L1200,0 L0,0 Z"></path>
+    </svg>
+  </div>
+
+  <!-- Optional footer here -->
+  <footer class="footer scroll-fade">
+    <p>&copy; 2025 RankMind – All rights reserved.</p>
   </footer>
 
   <script src="../../Scripts/ui.js"></script>
