Create more content to the 4 pages

--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -51,13 +51,26 @@
 
   <main class="content">
     <h1>Let's Talk</h1>
-    <p>We'd love to hear about your project, ideas, or even just say hello. Reach out and let's build something great together.</p>
+    <p>Have a website already? Want a full business launch? Contact us for a no-strings-attached consultation — we'll show you where you're missing traffic and how to fix it.</p>
     <form class="contact-form">
       <input type="text" placeholder="Your Name" required />
       <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" required></textarea>
+      <textarea placeholder="How can we help you?" required></textarea>
       <button type="submit">Send Message</button>
     </form>
+
+    <section class="section contact">
+      <h1>Contact Us</h1>
+      <p>Let's help your business get discovered — by Google, ChatGPT, and your local customers.</p>
+
+      <ul class="contact-info">
+        <li><strong>Email:</strong> <a href="mailto:contact@rankmind.net">contact@rankmind.net</a></li>
+        <li><strong>Website:</strong> <a href="https://rankmind.net">www.rankmind.net</a></li>
+        <li><strong>Location:</strong> Tel Aviv, Israel</li>
+      </ul>
+
+      <h2>Free Consultation</h2>
+    </section>
   </main>
 
   <footer>
