--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -46,11 +46,37 @@
 
   <main class="content">
     <h1>What We Offer</h1>
+    <h2>Local SEO & Google Ranking</h2>
     <ul class="service-list">
-        <li><strong>Custom Website Development:</strong> Tailored websites that speak your brand's voice.</li>
-        <li><strong>SEO Optimization:</strong> Make your site visible, fast, and search-engine friendly.</li>
-        <li><strong>UI/UX Design:</strong> Delightful interfaces with intuitive user flows.</li>
-        <li><strong>Performance & Security:</strong> Fast, secure, and built to scale.</li>
+      <li><strong>SEO Optimization:</strong> Make your site visible, fast, and search-engine friendly.</li>
+      <li>Google Business Profile setup (hours, service areas, photos, etc.)</li>
+      <li>Google Maps listing & optimization</li>
+      <li>Keyword strategy for top search results in your city</li>
+    </ul>
+
+    <h2>AI Chatbot Optimization</h2>
+    <ul class="service-list">
+      <li>Make your business discoverable in AI tools like ChatGPT & Gemini</li>
+      <li>Natural-language content targeting user questions and prompts</li>
+      <li>Optimize files and structure for AI-readability</li>
+    </ul>
+
+    <h2>Custom, Lightweight Website Development</h2>
+    <ul class="service-list">
+      <li><strong>Custom Website Development:</strong> Tailored websites that speak your brand's voice.</li>
+      <li>Hand-coded websites with no templates or plugins</li>
+      <li>Mobile-first design and fast loading speeds</li>
+      <li><strong>UI/UX Design:</strong> Delightful interfaces with intuitive user flows.</li>
+      <li>Clean code and structured metadata for better SEO</li>
+      <li>Ongoing updates, animations, or custom features available</li>
+      <li><strong>Performance & Security:</strong> Fast, secure, and built to scale.</li>
+    </ul>
+
+    <h2>Social Media Presence</h2>
+    <ul class="service-list">
+      <li>Facebook & Instagram setup with branding & content guidance</li>
+      <li>Basic YouTube presence for video SEO</li>
+      <li>Connecting with local groups and hashtags</li>
     </ul>
   </main>
 
