--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -45,26 +45,15 @@
     </ul>
   </nav>
 
-  <header class="hero content">
-    <h1>Who We Are</h1>
-    <p>Empowering Local Businesses with Smart Visibility</p>
-  </header>
-
   <main class="content">
-    <section id="home">
-      <h1>We specialize in SEO and marketing to help businesses grow online</h1>
-      <p>Get Your Business Discovered — by Google, GPT & Beyond
-          We help local businesses stand out where it matters most:
-           in Google search, AI chatbots like ChatGPT, and social networks.
-            Our tailored SEO and marketing strategies make sure your brand shows
-             up when and where customers are looking.</p>
-    </section>
-
     <section>
-      <h2>Our Mission</h2>
-      <p>We help small and local businesses grow by making them more discoverable online. Through tailored SEO strategies, chatbot optimization for platforms like ChatGPT, and smart use of social media, we drive real results where it matters — locally.</p>
+      <h1>About Rank Mind</h1>
+      <p><strong>Get Discovered by Google, ChatGPT & Beyond</strong></p>
+      <p>At Rank Mind, we help local businesses get found — not just on Google, but also on AI-powered tools like ChatGPT, Gemini, and more. In a world of generic websites and crowded search results, we make sure your business stands out where it counts.</p>
+      <p>We don’t use slow page builders or bloated templates. We hand-code lightning-fast websites, built from scratch to reflect your unique brand and convert more visitors into real customers. It’s not about fancy tools — it’s about results.</p>
+      <p>Whether you're a small shop or a growing brand, Rank Mind gives you the digital edge: clean code, clear SEO, and true visibility in the age of AI.</p>
     </section>
-    
+    <br>
     <section>
       <h2>Why Choose Us</h2>
       <ul class="service-list">
@@ -73,27 +62,25 @@
         <li>✔ Local chatbot placement that puts your services in ChatGPT</li>
       </ul>
     </section>
-
+    <br>
     <section>
       <h2>What We Believe In</h2>
       <p>We believe every local business deserves the chance to compete in the digital world without needing a huge budget or technical expertise. That’s why we focus on clarity, strategy, and honest results.</p>
     </section>
   </main>
 
-  <!-- Footer or Divider (Optional) -->
+  <!-- SVG Divider -->
   <div class="section-divider">
     <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
       <path class="divider-wave" d="M0,0 C600,50 600,50 1200,0 L1200,120 L0,120 Z"></path>
     </svg>
   </div>
-    <!-- SVG Divider -->
-  <div class="section-divider">
+  <div class="section-divider" style="top: -1px;"> <!-- "top: -1px;" added to fuze SVGs -->
     <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
       <path class="divider-wave" d="M0,0 C300,100 900,0 1200,100 L1200,0 L0,0 Z"></path>
     </svg>
   </div>
 
-  <!-- Optional footer here -->
   <footer class="footer scroll-fade">
     <p>&copy; 2025 RankMind – All rights reserved.</p>
   </footer>
