--- a/Pages/English/pricing.html
+++ b/Pages/English/pricing.html
@@ -44,6 +44,7 @@
     </ul>
   </nav>
 
+  <!-- This content need more love -->
   <main class="content">
     <h1>Transparent Pricing</h1>
     <p>We believe in clear, upfront pricing with no hidden fees. Whether you're just getting started or looking for enterprise-level solutions, we have a plan for you.</p>
@@ -65,6 +66,37 @@
             <p>Tailored solutions for large-scale digital projects.</p>
         </div>
     </div>
+
+    <section class="section pricing">
+      <h1>Pricing</h1>
+      <p>We believe in transparent pricing — no hidden fees, no subscriptions, and no monthly platform costs.</p>
+
+      <h2>🔹 Basic Website Package — 1,500₪</h2>
+      <ul>
+        <li>Single-page site (About + Contact)</li>
+        <li>Mobile responsive and lightning-fast</li>
+        <li>Basic SEO setup</li>
+      </ul>
+
+      <h2>🔹 Business Launch Package — 2,900₪</h2>
+      <ul>
+        <li>Multi-page custom website (About, Services, Pricing, Contact)</li>
+        <li>Google Business setup</li>
+        <li>AI Chatbot optimization (ChatGPT, Gemini)</li>
+        <li>Full mobile and SEO optimization</li>
+      </ul>
+
+      <h2>🔹 Full Visibility Package — Custom Quote</h2>
+      <ul>
+        <li>Includes everything from Business Launch</li>
+        <li>Social media setup + Google Ads integration</li>
+        <li>Ongoing SEO & content updates</li>
+        <li>Campaign strategy & analytics</li>
+      </ul>
+
+      <p>💬 Need something custom or just starting out? <a href="contact.html">Contact us</a> for a free consultation.</p>
+    </section>
+
   </main>
 
   <footer>
