Add background Pattern

--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -40,7 +40,7 @@
       <li><a href="#services">Services</a></li>
       <li><a href="./pricing.html">Pricing</a></li>
       <li><a href="./contact.html">Contact</a></li>
-      <li><a href="../Hebrew/services.html">Change Language 🌐</a></li>
+      <li><a href="../Hebrew/about.html">Change Language 🌐</a></li>
     </ul>
   </nav>
 
