--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -45,7 +45,7 @@
       <li><a href="./services.html">Services</a></li>
       <li><a href="./pricing.html">Pricing</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="../Hebrew/contact.html">Change Language 🌐</a></li>
+      <li><a href="../Hebrew/about.html">Change Language 🌐</a></li>
     </ul>
   </nav>
 
