--- a/Pages/English/pricing.html
+++ b/Pages/English/pricing.html
@@ -40,7 +40,7 @@
       <li><a href="./services.html">Services</a></li>
       <li><a href="#pricing">Pricing</a></li>
       <li><a href="./contact.html">Contact</a></li>
-      <li><a href="../Hebrew/pricing.html">Change Language 🌐</a></li>
+      <li><a href="../Hebrew/about.html">Change Language 🌐</a></li>
     </ul>
   </nav>
 
