--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -30,7 +30,10 @@
 
 <body>
   <header id="main-header">
-    <div class="logo">RankMind</div>
+    <div id="logo">
+      <img src="../../Images/logo_small.png" alt="Logo Image">
+      <div class="logo-text">RankMind</div>
+    </div>
     <div class="burger-icon" onclick="toggleMenu()">☰</div>
   </header>
 
