Add link to the logo to index page

--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -35,10 +35,12 @@
 
 <body>
   <header id="main-header">
-    <div id="logo">
-      <img src="../../Images/logo_small.png" alt="Logo Image">
-      <div class="logo-text">RankMind</div>
-    </div>
+    <a href="../../index.html" id="logo-link">
+      <div id="logo">
+        <img src="../../Images/logo_small.png" alt="Logo Image">
+        <div class="logo-text">RankMind</div>
+      </div>
+    </a>
     <div class="burger-icon" onclick="toggleMenu()">☰</div>
   </header>
 
