Creating immersive footer with new 3 pages of terms

--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -25,6 +25,7 @@
   <title>RankMind-About</title>
   <link rel="stylesheet" href="../../Styles/ui.css">
   <link rel="stylesheet" href="../../Styles/pages.css">
+  <link rel="stylesheet" href="../../Styles/footer.css">
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
@@ -86,7 +87,14 @@
   </div>
 
   <footer class="footer scroll-fade">
-    <p>&copy; 2025 RankMind – All rights reserved.</p>
+    <div class="footer-inner">
+      <p>&copy; 2025 RankMind</p>
+      <p class="footer-links">
+        <a href="/Pages/English/privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
+        <a href="/Pages/English/terms.html" target="_blank" rel="noopener noreferrer">Terms of Use</a> |
+        <a href="/Pages/English/accessibility.html" target="_blank" rel="noopener noreferrer">Accessibility</a>
+      </p>
+    </div>
   </footer>
 
   <script src="../../Scripts/ui.js"></script>
