--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -30,6 +30,7 @@
     <title>Contact Us | RankMind</title>
     <link rel="stylesheet" href="../../Styles/ui.css">
     <link rel="stylesheet" href="../../Styles/pages.css">
+    <link rel="stylesheet" href="../../Styles/footer.css">
     <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
