--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -25,6 +25,7 @@
   <title>RankMind-services</title>
   <link rel="stylesheet" href="../../Styles/ui.css">
   <link rel="stylesheet" href="../../Styles/pages.css">
+  <link rel="stylesheet" href="../../Styles/footer.css">
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 
