--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -22,7 +22,7 @@
 
   <meta http-equiv="Content-Language" content="en">
 
-  <title>RankMind-About</title>
+  <title>About | RankMind</title>
   <link rel="stylesheet" href="../../Styles/ui.css">
   <link rel="stylesheet" href="../../Styles/pages.css">
   <link rel="stylesheet" href="../../Styles/footer.css">
