--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -79,8 +79,15 @@
     </section>
   </main>
 
-  <footer>
-    <p class="footer-text">RankMind © 2025</p>
+  <footer class="footer scroll-fade">
+    <div class="footer-inner">
+      <p>&copy; 2025 RankMind</p>
+      <p class="footer-links">
+        <a href="/Pages/English/privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
+        <a href="/Pages/English/terms.html" target="_blank" rel="noopener noreferrer">Terms of Use</a> |
+        <a href="/Pages/English/accessibility.html" target="_blank" rel="noopener noreferrer">Accessibility</a>
+      </p>
+    </div>
   </footer>
 
   <script src="../../Scripts/ui.js"></script>
