--- a/Pages/English/terms.html
+++ b/Pages/English/terms.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terms of Use – RankMind</title>
+  <title>Terms of Use | RankMind</title>
   <link rel="stylesheet" href="../../Styles/legal.css" />
+  <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
 <body>
   <header class="hero">
