--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -22,7 +22,7 @@
 
   <meta http-equiv="Content-Language" content="en">
 
-  <title>RankMind-services</title>
+  <title>Services | RankMind</title>
   <link rel="stylesheet" href="../../Styles/ui.css">
   <link rel="stylesheet" href="../../Styles/pages.css">
   <link rel="stylesheet" href="../../Styles/footer.css">
@@ -86,8 +86,15 @@
     </ul>
   </main>
 
-  <footer>
-    <p class="footer-text">RankMind © 2025</p>
+  <footer class="footer scroll-fade">
+    <div class="footer-inner">
+      <p>&copy; 2025 RankMind</p>
+      <p class="footer-links">
+        <a href="/Pages/English/privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
+        <a href="/Pages/English/terms.html" target="_blank" rel="noopener noreferrer">Terms of Use</a> |
+        <a href="/Pages/English/accessibility.html" target="_blank" rel="noopener noreferrer">Accessibility</a>
+      </p>
+    </div>
   </footer>
 
   <script src="../../Scripts/ui.js"></script>
