Remove Hebrow link

--- a/Pages/English/accessibility.html
+++ b/Pages/English/accessibility.html
@@ -26,7 +26,7 @@
 
     <section>
       <h2>Feedback Welcome</h2>
-      <p>If you encounter any accessibility barriers, please <a href="/Pages/English/contact.html">contact us</a> so we can work to improve the experience.</p>
+      <p>If you encounter any accessibility barriers, please <a href="../../Pages/English/contact.html">contact us</a> so we can work to improve the experience.</p>
     </section>
   </main>
 </body>
