--- a/Pages/English/contact.html
+++ b/Pages/English/contact.html
@@ -51,7 +51,6 @@
       <li><a href="./services.html">Services</a></li>
       <li><a href="./pricing.html">Pricing</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="../Hebrew/about.html">Change Language 🌐</a></li>
     </ul>
   </nav>
 
@@ -72,7 +71,7 @@
       <ul class="contact-info">
         <li><strong>Email:</strong> <a href="mailto:contact@rankmind.net">contact@rankmind.net</a></li>
         <li><strong>Website:</strong> <a href="https://rankmind.net">www.rankmind.net</a></li>
-        <li><strong>Location:</strong> Tel Aviv, Israel</li>
+        <li><strong>Location:</strong> Phoenix, USA</li>
       </ul>
 
       <h2>Free Consultation</h2>
