--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta http-equiv="Content-Language" content="en">
 
     <!-- Title and Styles -->
-    <title>RankMind | Marketing & SEO Experts</title>
+    <title>Marketing & SEO Experts | RankMind</title>
     <link rel="stylesheet" href="./Styles/index.css">
     <link rel="stylesheet" href="./Styles/index_buttons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- This line imports the Font Awesome icon library -->
@@ -67,6 +67,15 @@
     </div>
   </div>
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  
   <footer>
     <p class="footer-text">RankMind © 2025</p>
   </footer>
