Add RAW content to services and fix text display in index page

--- a/Pages/English/services.html
+++ b/Pages/English/services.html
@@ -73,6 +73,10 @@
     </ul>
 
     <h2>AI Chatbot Optimization</h2>
+    <p>
+      Google is still the most popular search engine in the world. But AI search platforms like ChatGPT are gaining traction. 
+      That means businesses looking to improve visibility should ensure that their websites are optimized for AI platforms as well.
+    </p>
     <ul class="service-list">
       <li>Make your business discoverable in AI tools like ChatGPT & Gemini</li>
       <li>Natural-language content targeting user questions and prompts</li>
