recreate batch of style and content to about page

--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -25,6 +25,7 @@
   <title>About | RankMind</title>
   <link rel="stylesheet" href="../../Styles/ui.css">
   <link rel="stylesheet" href="../../Styles/pages.css">
+  <link rel="stylesheet" href="../../Styles/about.css">
   <link rel="stylesheet" href="../../Styles/footer.css">
   <link rel="icon" type="image/x-icon" href="../../Images/favicon.ico">
 </head>
@@ -62,24 +63,117 @@
     </ul>
   </nav>
 
+  <section class="hero-section">
+    <div class="hero-content">
+      <h1>Rise Above the Noise</h1>
+      <p>Get discovered by Google, ChatGPT, and the AI-powered future.</p>
+      <a href="./services.html" class="cta-button">Explore Our Services</a>
+    </div>
+  </section>
+
   <main class="content">
+    <section class="how-we-work">
+      <h2>How We Work</h2>
+      <div class="features-grid">
+        <div class="feature-item">
+          <h3>Hand-Coded Sites</h3>
+          <p>We craft lightweight, fast-loading websites with clean, scalable HTML, CSS, and JavaScript — no bloated templates.</p>
+        </div>
+        <div class="feature-item">
+          <h3>Crystal-Clear SEO</h3>
+          <p>We optimize every page to rank high on Google and be favored by AI-based search tools like ChatGPT.</p>
+        </div>
+        <div class="feature-item">
+          <h3>AI Visibility</h3>
+          <p>Your business becomes discoverable not just by humans — but also by the AI agents shaping the future of search.</p>
+        </div>
+      </div>
+    </section>
+
     <section>
       <h1>About Rank Mind</h1>
-      <p><strong>Get Discovered by Google, ChatGPT & Beyond</strong></p>
       <p>At Rank Mind, we help local businesses get found — not just on Google, but also on AI-powered tools like ChatGPT, Gemini, and more. In a world of generic websites and crowded search results, we make sure your business stands out where it counts.</p>
       <p>We don’t use slow page builders or bloated templates. We hand-code lightning-fast websites, built from scratch to reflect your unique brand and convert more visitors into real customers. It’s not about fancy tools — it’s about results.</p>
       <p>Whether you're a small shop or a growing brand, Rank Mind gives you the digital edge: clean code, clear SEO, and true visibility in the age of AI.</p>
     </section>
     <br>
-    <section>
-      <h2>Why Choose Us</h2>
-      <ul class="service-list">
-        <li>✔ Human-first, small-team care and direct support</li>
-        <li>✔ Proven SEO tactics that rank your business on Google</li>
-        <li>✔ Local chatbot placement that puts your services in ChatGPT</li>
-      </ul>
+    <section class="why-choose-us">
+      <h2>Why Choose Rank Mind?</h2>
+      <div class="benefits-grid">
+        <div class="benefit-item">
+          <div class="icon">⚡</div>
+          <h3>Speed First</h3>
+          <p>Your website will load instantly, optimized for both mobile and desktop users.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">📍</div>
+          <h3>Local SEO Experts</h3>
+          <p>We specialize in helping local businesses rank high on Google Maps & organic search.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">🤖</div>
+          <h3>AI-Ready</h3>
+          <p>Your business will be visible to AI like ChatGPT, Google Gemini, and future AI agents.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">🛠️</div>
+          <h3>Custom Built</h3>
+          <p>No WordPress. No drag-and-drop builders. Just handcrafted performance-focused code.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">🔒</div>
+          <h3>Secure by Design</h3>
+          <p>Static sites with no backend attack surface — clean, fast, and secure.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">📞</div>
+          <h3>Human Support</h3>
+          <p>Work with a real person, not a call center. We're responsive and transparent.</p>
+        </div>
+      </div>
     </section>
-    <br>
+
+    <section class="our-process">
+      <h2>Our Process</h2>
+      <div class="process-steps">
+        <div class="process-step">
+          <div class="step-circle">1</div>
+          <div class="step-content">
+            <h3>Discovery</h3>
+            <p>We start by understanding your business, your goals, and your local market challenges.</p>
+          </div>
+        </div>
+        <div class="process-step">
+          <div class="step-circle">2</div>
+          <div class="step-content">
+            <h3>Strategy & SEO</h3>
+            <p>We plan a content and SEO strategy tailored for visibility on Google & AI platforms.</p>
+          </div>
+        </div>
+        <div class="process-step">
+          <div class="step-circle">3</div>
+          <div class="step-content">
+            <h3>Handcrafted Website</h3>
+            <p>We build your website from scratch with pure HTML, CSS, and JavaScript — no bloat.</p>
+          </div>
+        </div>
+        <div class="process-step">
+          <div class="step-circle">4</div>
+          <div class="step-content">
+            <h3>Launch & Optimize</h3>
+            <p>We launch your site, set up analytics, and fine-tune performance and visibility.</p>
+          </div>
+        </div>
+        <div class="process-step">
+          <div class="step-circle">5</div>
+          <div class="step-content">
+            <h3>Ongoing Support</h3>
+            <p>We provide continuous updates, content guidance, and expert advice as you grow.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section>
       <h2>What We Believe In</h2>
       <p>We believe every local business deserves the chance to compete in the digital world without needing a huge budget or technical expertise. That’s why we focus on clarity, strategy, and honest results.</p>
