Adjusting content to about page

--- a/Pages/English/about.html
+++ b/Pages/English/about.html
@@ -72,6 +72,15 @@
   </section>
 
   <main class="content">
+    <section class="intro-summary scroll-fade">
+      <div class="intro-inner">
+        <h2>What We Do</h2>
+        <p>
+          At RankMind, we help your business stand out where it counts — in Google, ChatGPT, and the AI-powered tools shaping modern search. Whether you're a small shop or a growing brand, we give you the digital edge: clean code, clear SEO, and true visibility in the age of AI.
+        </p>
+      </div>
+    </section>
+
     <section class="how-we-work">
       <h2>How We Work</h2>
       <div class="features-grid">
@@ -86,49 +95,6 @@
         <div class="feature-item">
           <h3>AI Visibility</h3>
           <p>Your business becomes discoverable not just by humans — but also by the AI agents shaping the future of search.</p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h1>About Rank Mind</h1>
-      <p>At Rank Mind, we help local businesses get found — not just on Google, but also on AI-powered tools like ChatGPT, Gemini, and more. In a world of generic websites and crowded search results, we make sure your business stands out where it counts.</p>
-      <p>We don’t use slow page builders or bloated templates. We hand-code lightning-fast websites, built from scratch to reflect your unique brand and convert more visitors into real customers. It’s not about fancy tools — it’s about results.</p>
-      <p>Whether you're a small shop or a growing brand, Rank Mind gives you the digital edge: clean code, clear SEO, and true visibility in the age of AI.</p>
-    </section>
-    <br>
-    <section class="why-choose-us">
-      <h2>Why Choose Rank Mind?</h2>
-      <div class="benefits-grid">
-        <div class="benefit-item">
-          <div class="icon">⚡</div>
-          <h3>Speed First</h3>
-          <p>Your website will load instantly, optimized for both mobile and desktop users.</p>
-        </div>
-        <div class="benefit-item">
-          <div class="icon">📍</div>
-          <h3>Local SEO Experts</h3>
-          <p>We specialize in helping local businesses rank high on Google Maps & organic search.</p>
-        </div>
-        <div class="benefit-item">
-          <div class="icon">🤖</div>
-          <h3>AI-Ready</h3>
-          <p>Your business will be visible to AI like ChatGPT, Google Gemini, and future AI agents.</p>
-        </div>
-        <div class="benefit-item">
-          <div class="icon">🛠️</div>
-          <h3>Custom Built</h3>
-          <p>No WordPress. No drag-and-drop builders. Just handcrafted performance-focused code.</p>
-        </div>
-        <div class="benefit-item">
-          <div class="icon">🔒</div>
-          <h3>Secure by Design</h3>
-          <p>Static sites with no backend attack surface — clean, fast, and secure.</p>
-        </div>
-        <div class="benefit-item">
-          <div class="icon">📞</div>
-          <h3>Human Support</h3>
-          <p>Work with a real person, not a call center. We're responsive and transparent.</p>
         </div>
       </div>
     </section>
@@ -170,6 +136,42 @@
             <h3>Ongoing Support</h3>
             <p>We provide continuous updates, content guidance, and expert advice as you grow.</p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="why-choose-us">
+      <h2>Why Choose Rank Mind?</h2>
+      <div class="benefits-grid">
+        <div class="benefit-item">
+          <div class="icon">⚡</div>
+          <h3>Speed First</h3>
+          <p>Your website will load instantly, optimized for both mobile and desktop users.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">📍</div>
+          <h3>Local SEO Experts</h3>
+          <p>We specialize in helping local businesses rank high on Google Maps & organic search.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">🤖</div>
+          <h3>AI-Ready</h3>
+          <p>Your business will be visible to AI like ChatGPT, Google Gemini, and future AI agents.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">🛠️</div>
+          <h3>Custom Built</h3>
+          <p>No WordPress. No clutter. Just clean, handcrafted code built to convert.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">🔒</div>
+          <h3>Secure by Design</h3>
+          <p>Static sites with no backend attack surface — clean, fast, and secure.</p>
+        </div>
+        <div class="benefit-item">
+          <div class="icon">📞</div>
+          <h3>Human Support</h3>
+          <p>Work with a real person, not a call center. We're responsive and transparent.</p>
         </div>
       </div>
     </section>
